# pirates

./: .gitignore  CMakeLists.txt  Makefile  README  UMLpirates.dia  configure  pirates.sln  update.pl
data/: 3fort.pwd  README.txt  king.egg.pz  worldex.pwd
docs/: Classes.zargo  README  UMLpirates.dia  filetype.txt  filetype_code.h  input_commands.txt  pwdgenereate.c  pwdread.c
include/: README.txt
lib/: README.txt
src/: boat.cpp  boat.h  game.cpp  game.h  inputmanager.cpp  inputmanager.h  main.cpp  nota.txt  old_main.cpp  pirates.vcproj  src_list.txt
src/base/: boat.cpp  boat.h  game.cpp  game.h  inputhandler.h  inputmanager.cpp  inputmanager.h  runnable.cpp  runnable.h  types.h  vs2008_stdint.h
src/world/: InputHandler.cpp  arrow.cpp  arrow.h  camera.cpp  camera.h  city.h  inputhandler.cpp  inputhandler.h  island.h  planet.cpp  planet.h  ship.cpp  ship.h  treasure.h  world.cpp  world.h  worldactor.cpp  worldactor.h  worldobject.h
src/world/utils/: filetype.h  movtasks.cpp  movtasks.h  navigator.cpp  navigator.h  routetracer.cpp  routetracer.h  tile.cpp  tile.h  tileset.cpp  tileset.h  worlddata.cpp  worlddata.h  worlddata.h_old  worldpoint.h  worldpos.cpp  worldpos.h  worldvecbase.cpp  worldvecbase.h  worldvector.cpp  worldvector.h
